--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "csgo": "^1.5.15",
+    "csgodemoreader": "^1.0.22",
     "demofile": "^2.10.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsdom": "^21.1.1",
     "steam": "^1.4.1",
-    "steam-totp": "^2.1.2"
+    "steam-totp": "^2.1.2",
+    "svg-builder": "^2.0.0",
+    "svg.js": "^2.7.1",
+    "svgdom": "^0.1.13",
+    "svgjs": "^2.6.2",
+    "unbzip2-stream": "^1.4.3",
+    "unzipper": "^0.10.11"
   }
 }
